# DSLMaker

./: .gitignore  .mcp.json  AGENTS.md  AGENT_TESTING_GUIDE.md  BACKEND_FUNCTIONALITY_REVIEW.md  BACKEND_GAP_FIXES_COMPLETE.md  BACKEND_IMPLEMENTATION_REVIEW.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  DIFY_FRONTEND_COMPLETION_REPORT.md  DIFY_FRONTEND_PLAN.md  DSL_NodeDefinitionsTechnicalReference.md  FRONTEND_GRAPH_DISPLAY_REVIEW.md  FRONTEND_GRAPH_ENHANCEMENTS_COMPLETE.md  IMPLEMENTATION_REVIEW_REPORT.md  LOCAL_DEVELOPMENT_ROADMAP.md  PHASE4_INTEGRATION_COMPLETE.md  PHASE5_COMPLETION_REPORT.md  PHASE5_WORK_SUMMARY.md  PROJECT_RECONSTRUCTION_PLAN.md  README.md  WORKLOG.md  code_review.md  code_review_gemini.md  dify_workflow_DSLリファレンス.md  final-test-results.json  final_code_review.md  package-lock.json  package.json  playwright.config.ts  test-actual-llm.js  test-api-call.js  test-complete-flow-final.js  test-complete-flow.js  test-comprehensive.js  test-dsl-generation.js  test-final.js  test-integration.js  test-json-approach.js  test-json-yaml-final.js  (+3 more)
.serena/: project.yml
backend/: .coverage  .dockerignore  .env.example  .env.production.example  AGENT_IMPROVEMENT_RESULTS.md  DIFY_IMPLEMENTATION_SUMMARY.md  Dockerfile  KNOWN_ISSUES.md  PHASE3_COMPLETION_REPORT.md  README_DIFY.md  coverage.xml  docker-compose.yml  extract_node_examples.py  pyproject.toml  run_agent_tests.sh  test_dify_models_comprehensive.py
backend/app/: __init__.py  config.py  main.py  mcp_client.py
backend/docs/: agent_design.md
backend/examples/: build_dify_workflow_example.py  example_workflow.yaml
(+337 files in other folders)
